--- a/scripts/components/poi3/tpls/attr-tips/poiPopoverTips.html
+++ b/scripts/components/poi3/tpls/attr-tips/poiPopoverTips.html
@@ -10,6 +10,19 @@
         <img ng-if="nowActiveImg.thumbnailUrl" ng-click="showImage(nowActiveImg,nowActiveIndex);" image-404="../../../images/road/img/noimg.png" ng-src="{{nowActiveImg.originUrl}}" class="img-preview" alt="">
         <img ng-if="!nowActiveImg.thumbnailUrl" src="../../../images/road/img/noimg.png" class="img-preview" alt="当前无图片">
     </div>
+    <div class="col-sm-12 task-box">
+        <div class="col-sm-6 text-control">
+            <select class="fm-control" ng-model="nowActiveImg.tag" ng-options="item.id as item.label for item in photoTagOptions"></select>
+        </div>
+        <div class="col-sm-6 text-right">
+            <label class="col-sm-8 text-control">
+                <input type="radio" name="taskTime">当前作业季
+            </label>
+            <label class="col-sm-4 text-control">
+                <input type="radio" name="taskTime">全部
+            </label>
+        </div>
+    </div>
     <div class="meta-info col-sm-12">
         <button class="preview-left" ng-click="turnTipsPage(1);" ng-disabled="tipsPage == 1">
             <span class="glyphicon glyphicon-menu-left"></span>
