--- a/scripts/components/poi3/tpls/attr-deep/restaurantTpl.html
+++ b/scripts/components/poi3/tpls/attr-deep/restaurantTpl.html
@@ -35,15 +35,15 @@
                         <label>菜品风味</label>
                         <div class="block">
                             <div style="border-bottom: 1px solid gray;">
-                                <label ng-repeat="(key, value) in foodType1Obj" ng-if="key == 2016 || key == 1001 || key == 3009 || key == 3015" class="fm-specialopt">
+                                <label ng-repeat="(key, value) in foodType1Obj" style="font-weight: normal;margin-right: 2px;" ng-if="key == 2016 || key == 1001 || key == 3009 || key == 3015" class="fm-specialopt">
                                     <input type="checkbox" value="{{key}}" ng-model="poi.restaurants[0].foodType1[key]" ng-click="foodType1Change($event)"> {{value}}
                                 </label>
-                                <label ng-repeat="(key, value) in foodType1Obj" ng-if="key != 2016">
+                                <label ng-repeat="(key, value) in foodType1Obj" style="font-weight: normal;margin-right: 2px;" ng-if="key != 2016">
                                     <input type="checkbox" value="{{key}}" ng-model="poi.restaurants[0].foodType1[key]" ng-click="foodType1Change($event)"> {{value}}
                                 </label>
                             </div>
                             <div style="margin-top: 10px;">
-                                <label ng-repeat="(key, value) in foodType2Obj">
+                                <label ng-repeat="(key, value) in foodType2Obj" style="font-weight: normal;margin-right: 2px;">
                                     <input type="checkbox" value="{{key}}" ng-model="poi.restaurants[0].foodType2[key]" ng-click="foodType2Change($event)"> {{value}}
                                 </label>
                             </div>
