--- a/scripts/components/poi3/tpls/edit-tools/errorCheckTpl.html
+++ b/scripts/components/poi3/tpls/edit-tools/errorCheckTpl.html
@@ -24,8 +24,8 @@
                     <div ng-if="row.mutiCheck">
                         [{{row.featureType}},
                         <span ng-repeat="item in row.mutiListCheck">
-                            <a href="#" ng-if="$index < row.mutiListCheck.length-1" class="fm-target" ng-click="showPoiOnMap(item)">{{item }},</a>
-                            <a href="#" ng-if="$index == row.mutiListCheck.length-1" class="fm-target" ng-click="showPoiOnMap(item)">{{item }}</a>
+                            <a href="#" ng-if="$index < row.mutiListCheck.length-1" class="fm-target" ng-click="showOnMap(item,row.featureType)">{{item }},</a>
+                            <a href="#" ng-if="$index == row.mutiListCheck.length-1" class="fm-target" ng-click="showOnMap(item,row.featureType)">{{item }}</a>
                         </span>
                         ]
                     </div>
