--- a/scripts/components/poi3/tpls/toolBar_cru_tpl/addPoiTpl.html
+++ b/scripts/components/poi3/tpls/toolBar_cru_tpl/addPoiTpl.html
@@ -1,28 +1,4 @@
 <style>
-    .addAdNode_false {
-        background: url('../../../images/road//button/dot_add.png') no-repeat;
-        width: 32px;
-        height: 32px;
-    }
-
-    .addAdNode_true {
-        background: url('../../../images/road//button/dot_add_selected.png') no-repeat;
-        width: 32px;
-        height: 32px;
-    }
-
-    .addAdLink_false {
-        background: url('../../../images/road//button/line_add.png') no-repeat;
-        width: 32px;
-        height: 32px;
-    }
-
-    .addAdLink_true {
-        background: url('../../../images/road//button/line_add_selected.png') no-repeat;
-        width: 32px;
-        height: 32px;
-    }
-
     .addAdAdmin_false {
         background: url('../../../images/road//button/adAdmin_add.png') no-repeat;
         width: 32px;
@@ -31,17 +7,6 @@
 
     .addAdAdmin_true {
         background: url('../../../images/road//button/adAdmin_add_selected.png') no-repeat;
-        width: 32px;
-        height: 32px;
-    }
-    .addAdFace_false {
-        background: url('../../../images/road//button/adAdFace_add.png') no-repeat;
-        width: 32px;
-        height: 32px;
-    }
-
-    .addAdFace_true {
-        background: url('../../../images/road//button/adAdFace_add_selected.png') no-repeat;
         width: 32px;
         height: 32px;
     }
@@ -66,7 +31,7 @@
 </style>
 <div id="fm-addShapContainer" ng-controller="addPoiController" class="btn-group btn-group-sm dropdown" style="width: 100%;">
 
-    <button type="button" class="btn addAdAdmin_{{classArr[5]}} dropdown-toggle"  ng-click="addPoi('poi',5,$event)"
+    <button type="button" class="btn addAdAdmin_{{classArr[5]}} dropdown-toggle"  ng-click="addPoi('IXPOI',5,$event)"
             title="新增POI点">
     </button>
 
