维修和施工tips面板修改

--- a/scripts/components/poi3/tpls/attr-tips/poiPopoverTips.html
+++ b/scripts/components/poi3/tpls/attr-tips/poiPopoverTips.html
@@ -29,7 +29,7 @@
                 <input type="radio" name="taskTime">当前作业季
             </label>
             <label class="col-sm-4 text-control">
-                <input type="radio" name="taskTime">全部
+                <input type="radio" name="taskTime" checked>全部
             </label>
         </div>
     </div>
