--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -1246,15 +1246,11 @@
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">开始时间:</label>
+                            <label class="col-sm-5 control-label" style="padding: 4px">时&nbsp;&nbsp;间&nbsp;&nbsp;段:</label>
                             <div class="col-sm-7" style="padding: 4px">
-                                <span class="label " ng-bind="startTime"></span>
-                            </div>
-                        </div>
-                        <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">结束时间:</label>
-                            <div class="col-sm-7" style="padding: 4px">
-                                <span class="label " ng-bind="endTime"></span>
+                                <div ng-repeat="item in timeDomain" class="text-ellipsis">
+                                    <span class="label" title="{{item}}">{{item}}</span>
+                                </div>
                             </div>
                         </div>
                     </form>
@@ -1276,15 +1272,11 @@
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">开始时间:</label>
+                            <label class="col-sm-5 control-label" style="padding: 4px">时&nbsp;&nbsp;间&nbsp;&nbsp;段:</label>
                             <div class="col-sm-7" style="padding: 4px">
-                                <span class="label " ng-bind="startTime"></span>
-                            </div>
-                        </div>
-                        <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">结束时间:</label>
-                            <div class="col-sm-7" style="padding: 4px">
-                                <span class="label " ng-bind="endTime"></span>
+                                <div ng-repeat="item in timeDomain" class="text-ellipsis">
+                                    <span class="label" title="{{item}}">{{item}}</span>
+                                </div>
                             </div>
                         </div>
                     </form>
