--- a/scripts/components/road3/tpls/layers_switch_tpl/sceneLayers.html
+++ b/scripts/components/road3/tpls/layers_switch_tpl/sceneLayers.html
@@ -27,7 +27,7 @@
         color: rgba(255, 255, 255, 0.5);
     }
 </style>
-<div ng-controller="sceneLayersController" class="sceneLayerPanel">
+<div ng-controller="scenceLayersController" class="sceneLayerPanel">
     <div style="background-color: rgb(64,64,64);padding: 5px 10px;">
         <label style="font-size:18px;color:#FFF;margin-bottom: 0;letter-spacing: 3px">
             <i style="font-size: 16px;" class="glyphicon glyphicon-wrench"></i> 图层设置
@@ -38,7 +38,7 @@
         <li>
             <ul style="padding-left: 10px">
                 <li ng-repeat="scence in scenceArray">
-                    <input tabindex="1" style="float:right;margin-right: 10px" type="radio" ng-checked="scence.selected" ng-click="toggleScence(scence, $event)" />
+                    <input type="radio" name="scence" style="float:right;margin-right: 10px" value="{{scence.id}}" ng-model="selectedScenceId" ng-click="selectScence(scence, $event)"/>
                     <label style="font-weight: bold;">{{scence.label}}</label>
                 </li>
             </ul>
