--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -34,19 +34,19 @@
         <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">关系 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDCROSS')">RDCROSS</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDSPEEDLIMIT')">RDSPEEDLIMIT</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDRESTRICTION')">RDRESTRICTION</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDLANECONNEXITY')">RDLANECONNEXITY</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDGSC')">RDGSC</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_3D')">RDSPEEDLIMIT</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_HIGHWAY')">RDSPEEDLIMIT</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_SERIESBRANCH')">RDSPEEDLIMIT</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_SIGNBOARDNAME')">RDSPEEDLIMIT</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_BIGCROSSSCHEMATIC')">RDSPEEDLIMIT</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_NORMALROAD')">RDSPEEDLIMIT</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_REALIMAGE')">RDSPEEDLIMIT</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_SIGNASREAL')">RDSPEEDLIMIT</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('RDCROSS')">路口</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('RDSPEEDLIMIT')">限速</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('RDRESTRICTION')">交限</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('RDLANECONNEXITY')">车信</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('RDGSC')">立交</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_3D')">3D分歧</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_HIGHWAY')">高速分歧</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_SERIESBRANCH')">连续分歧</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_SIGNBOARDNAME')">方向看板</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_BIGCROSSSCHEMATIC')">大路口交叉点模式图</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_NORMALROAD')">普通道路方向</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_REALIMAGE')">实景图</button>
+                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_SIGNASREAL')">实景看板</button>
             </div>
         </ul>
     </div>
