--- a/scripts/components/poi3/tpls/attr-base/poiDataListTpl.html
+++ b/scripts/components/poi3/tpls/attr-base/poiDataListTpl.html
@@ -45,7 +45,7 @@
             <button class="btn btn-xs btn-purple" ng-style="{'display':{true:'inline',false:'none'}[dataListType==2]}" ng-click="doSubmitData();">数据提交</button>
         </div>
     </div>
-    <div class="table-container dark scroll-styled">
+    <div class="fm-table-content">
         <table ng-table-dynamic="tableParams with cols" class="table table-bordered table-condensed poi-list">
             <colgroup>
             <col ng-repeat="col in cols | filter:{show: true}" width="{{col.width || '100'}}"/>
