--- a/scripts/components/poi3/tpls/attr-tips/poiPopoverTips.html
+++ b/scripts/components/poi3/tpls/attr-tips/poiPopoverTips.html
@@ -9,7 +9,7 @@
         <span ng-if="nowActiveImg.thumbnailUrl" class="glyphicon glyphicon-trash remove-preview-img" title="删除" ng-click="deletePhoto(nowActiveImg);"></span>
         <img ng-if="nowActiveImg.thumbnailUrl" ng-click="showImage(nowActiveImg,nowActiveIndex);" image-404="../../../images/road/img/noimg.png" ng-src="{{nowActiveImg.originUrl}}" class="img-preview" alt="">
         <img ng-if="!nowActiveImg.thumbnailUrl" src="../../../images/road/img/noimg.png" class="img-preview" alt="当前无图片">
-        <span class="photo-page">{{nowActiveIndex+1}}/{{poi.photos.length}}</span>
+        <span class="photo-page">{{nowActiveIndex+1}}/{{poi.photos.length==0?1:poi.photos.length}}</span>
         <!--<div class="photo-load-bg" ng-show="showPhotoLoading">
             <div class="spinner">
                 <div class="rect1"></div>
