地图操作面板

--- a/scripts/components/tools/tpls/toolbar-map/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/toolbarTpl.htm
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="btn-group">
-        <button type="button" class="btn btn-xs" ng-class="{false:'btn-primary',true:'btn-danger'}[advanceBtnOpened]" ng-click="toggleAdvanceBtn()" ng-bind="advanceBtnOpened?'收起《':'高级 》'"></button>
+        <button type="button" class="btn btn-xs" ng-class="{false:'btn-primary',true:'btn-danger'}[advanceBtnOpened]" ng-click="toggleAdvanceBtn()" ng-bind="advanceBtnOpened?'收起《':'专项 》'"></button>
         <div ng-include="advanceToolsTpl" ng-if="advanceBtnOpened" class="btn-group">
         </div>
     </div>
