--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -1,12 +1,12 @@
-<div class="btn-group" ng-controller="addShapeCtrl">
+<div class="btn-group">
     <div class="btn-group">
         <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">点 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDNODE')">RDNODE</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('RWNODE')">RWNODE</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('ADNODE')">ADNODE</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('ZONENODE')">ZONENODE</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('RDNODE')">RDNODE</button>
+                <button type="button" class="btn btn-shape" ng-controller="addRwShapeCtrl" ng-click="addShape('RWNODE')">RWNODE</button>
+                <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('ADNODE')">ADNODE</button>
+                <button type="button" class="btn btn-shape" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONENODE')">ZONENODE</button>
             </div>
         </ul>
     </div>
@@ -14,10 +14,10 @@
         <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">线 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDLINK')">RDLINK</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('RWLINK')">RWLINK</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('ADLINK')">ADLINK</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('ZONELINK')">ZONELINK</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('RDLINK')">RDLINK</button>
+                <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('RWLINK')">RWLINK</button>
+                <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('ADLINK')">ADLINK</button>
+                <button type="button" class="btn btn-shape" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONELINK')">ZONELINK</button>
             </div>
         </ul>
     </div>
@@ -25,8 +25,10 @@
         <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">面 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
-                <button type="button" class="btn btn-shape" ng-click="addShape('ADFACE')">ADFACE</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('ZONEFACE')">ZONEFACE</button>
+                <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('ADFACE')">ADFACE</button>
+                <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('ADLINKFACE')">ADLINKFACE</button>
+                <button type="button" class="btn btn-shape" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONEFACE')">ZONEFACE</button>
+                <button type="button" class="btn btn-shape" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONELINKFACE')">ZONELINKFACE</button>
             </div>
         </ul>
     </div>
@@ -34,19 +36,19 @@
         <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">关系 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDCROSS')">路口</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDSPEEDLIMIT')">限速</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDRESTRICTION')">交限</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDLANECONNEXITY')">车信</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('RDGSC')">立交</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_3D')">3D分歧</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_HIGHWAY')">高速分歧</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_SERIESBRANCH')">连续分歧</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_SIGNBOARDNAME')">方向看板</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_BIGCROSSSCHEMATIC')">大路口交叉点模式图</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_NORMALROAD')">普通道路方向</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_REALIMAGE')">实景图</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_SIGNASREAL')">实景看板</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('RDCROSS')">路口</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('RDSPEEDLIMIT')">限速</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('RDRESTRICTION')">交限</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('RDLANECONNEXITY')">车信</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('RDGSC')">立交</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('BRANCH_3D')">3D分歧</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('BRANCH_HIGHWAY')">高速分歧</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('BRANCH_SERIESBRANCH')">连续分歧</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('BRANCH_SIGNBOARDNAME')">方向看板</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('BRANCH_BIGCROSSSCHEMATIC')">大路口交叉点模式图</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('BRANCH_NORMALROAD')">普通道路方向</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('BRANCH_REALIMAGE')">实景图</button>
+                <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('BRANCH_SIGNASREAL')">实景看板</button>
             </div>
         </ul>
     </div>
@@ -54,8 +56,8 @@
         <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">点要素 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
-                <button type="button" class="btn btn-shape" ng-click="addShape('IXPOI')">IXPOI</button>
-                <button type="button" class="btn btn-shape" ng-click="addShape('ADADMIN')">ADADMIN</button>
+                <button type="button" class="btn btn-shape" ng-controller="addPoiCtrl" ng-click="addShape('IXPOI')">IXPOI</button>
+                <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('ADADMIN')">ADADMIN</button>
             </div>
         </ul>
     </div>
