当前作业季修改

--- a/scripts/components/poi3/tpls/attr-tips/poiPopoverTips.html
+++ b/scripts/components/poi3/tpls/attr-tips/poiPopoverTips.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col-sm-6 text-right">
             <label class="col-sm-8 text-control">
-                <input type="radio" name="taskTime">当前作业季
+                <input type="radio" name="taskTime">作业季
             </label>
             <label class="col-sm-4 text-control">
                 <input type="radio" name="taskTime" checked>全部
