--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -15,7 +15,7 @@
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
                 <button type="button" class="btn btn-shape" ng-controller="addShapeCtrl" ng-click="addShape('RDLINK')">RDLINK</button>
-                <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('RWLINK')">RWLINK</button>
+                <button type="button" class="btn btn-shape" ng-controller="addRwShapeCtrl" ng-click="addShape('RWLINK')">RWLINK</button>
                 <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('ADLINK')">ADLINK</button>
                 <button type="button" class="btn btn-shape" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONELINK')">ZONELINK</button>
             </div>
