--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -1748,6 +1748,14 @@
                             </div>
                         </div>
                         <!--end 挂接-->
+                        <!--begin 辅路-->
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('dis')">
+                            <label class="col-sm-5 control-label" style="padding: 4px">辅&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;路:</label>
+                            <div class="col-sm-7" style="padding: 4px">
+                                <span class="label ">{{dataTipsData.dis}} 米</span>
+                            </div>
+                        </div>
+                        <!--end 辅路-->
                     </form>
                 </div>
             </div>
