--- a/scripts/components/tools/tpls/toolbar-map/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/toolbarTpl.htm
@@ -1,17 +1,20 @@
 <div ng-controller="mapToolbarCtrl">
     <div class="btn-group">
-        <button type="button" class="btn btn-xs" ng-class="{false:'btn-primary',true:'btn-danger'}[selectBtnOpened]" ng-click="toggleSelectBtn()" ng-bind="selectBtnOpened?'收起《':'选择 》'"></button>
+        <button type="button" class="btn btn-xs btn-shape-cap" ng-class="{true:'active'}[selectBtnOpened]" ng-click="toggleSelectBtn()" ng-bind="selectBtnOpened?'收起《':'选择 》'"></button>
         <div ng-include="selectShapeTpl" ng-if="selectBtnOpened" class="btn-group">
         </div>
     </div>
     <div class="btn-group">
-        <button type="button" class="btn btn-xs" ng-class="{false:'btn-primary',true:'btn-danger'}[addBtnOpened]" ng-click="toggleAddBtn()" ng-bind="addBtnOpened?'收起《':'新增 》'"></button>
+        <button type="button" class="btn btn-xs btn-shape-cap" ng-class="{true:'active'}[addBtnOpened]" ng-click="toggleAddBtn()" ng-bind="addBtnOpened?'收起《':'新增 》'"></button>
         <div ng-include="addShapeTpl" ng-if="addBtnOpened" class="btn-group">
         </div>
     </div>
     <div class="btn-group">
-        <button type="button" class="btn btn-xs" ng-class="{false:'btn-primary',true:'btn-danger'}[advanceBtnOpened]" ng-click="toggleAdvanceBtn()" ng-bind="advanceBtnOpened?'收起《':'专项 》'"></button>
+        <button type="button" class="btn btn-xs btn-shape-cap" ng-class="{true:'active'}[advanceBtnOpened]" ng-click="toggleAdvanceBtn()" ng-bind="advanceBtnOpened?'收起《':'专项 》'"></button>
         <div ng-include="advanceToolsTpl" ng-if="advanceBtnOpened" class="btn-group">
         </div>
+    </div>
+    <div class="btn-group">
+        <button type="button" class="btn btn-xs btn-shape" ng-class="{'navigate':'active'}[shapeOperator]" ng-click="clearOperator()"><i class="glyphicon glyphicon-hand-up"></i></button>
     </div>
 </div>
