选择按钮功能修改

--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -25,10 +25,10 @@
         <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">面 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
-                <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('ADFACE')">ADFACE</button>
-                <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('ADLINKFACE')">ADLINKFACE</button>
-                <button type="button" class="btn btn-shape" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONEFACE')">ZONEFACE</button>
-                <button type="button" class="btn btn-shape" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONELINKFACE')">ZONELINKFACE</button>
+                <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('ADFACE')">AD面</button>
+                <button type="button" class="btn btn-shape" ng-controller="addAdShapeCtrl" ng-click="addShape('ADLINKFACE')">AD线构面</button>
+                <button type="button" class="btn btn-shape" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONEFACE')">ZONE面</button>
+                <button type="button" class="btn btn-shape" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONELINKFACE')">ZONE线构面</button>
             </div>
         </ul>
     </div>
