1.调整地图背景色； 2.修改左侧俩表滚动条

--- a/scripts/components/road3/tpls/layers_switch_tpl/filedsResultTpl.html
+++ b/scripts/components/road3/tpls/layers_switch_tpl/filedsResultTpl.html
@@ -293,7 +293,7 @@
                 </div>
                 <span>共{{items.total}}个</span>
             </div>
-            <div style="width:100%;">
+            <div class="fm-fitsize dark scroll-styled" style="top:130px;">
                 <ul id="dataList">
                     <li ng-repeat="pItem in items" id="{{pItem.id}}">
                         <div ng-click="showContent(pItem,[1,3],0,$event)">
