--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -1573,6 +1573,9 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
     -moz-box-shadow: none;
 }
 
+
+/*自适应*/
+
 .fm-fitsize {
     position: absolute;
     width: auto;
@@ -1583,11 +1586,20 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
     right: 0px;
 }
 
+
+/*浮动面板，主要用于地图上方的操作按钮*/
+
 .float-toolbar {
     position: absolute;
     z-index: 1;
     background: rgba(64, 64, 64, 0.8);
     padding: 5px;
+}
+
+.float-toolbar .btn:focus {
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
 }
 
 .btn-shape-cap {
