按钮样式修改

--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -56,7 +56,7 @@
         <button type="button" class="btn btn-xs btn-shape dropdown-toggle" ng-class="{'addPointFeature':'active'}[shapeOperator]" data-toggle="dropdown">点要素 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
-                <button type="button" class="btn btx-xs btn-feat" ng-class="{'IXPOI':'active'}[featureOperator]" ng-controller="addPoiCtrl" ng-click="addShape('IXPOI')">IXPOI</button>
+                <button type="button" class="btn btx-xs btn-feat" ng-class="{'IXPOI':'active'}[featureOperator]" ng-controller="addPoiCtrl" ng-click="addPoi('IXPOI')">IXPOI</button>
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'ADADMIN':'active'}[featureOperator]" ng-controller="addAdShapeCtrl" ng-click="addShape('ADADMIN')">ADADMIN</button>
             </div>
         </ul>
