--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -129,19 +129,19 @@
     <div class="tips-title">
         <div class="col-sm-12" style="display: inline; cursor: pointer; padding-top: 2px; padding-left: 19px; width: 100px">
             <div ng-if="tipsPhotos.length == 0">
-                <img ng-src="../../../images/road/img/noimg.png" width="60px" height="60px" ng-click="noPic()">
+                <img ng-src="../../../images/road/img/noimg.png" class="road-tips-img" width="60px" height="60px" ng-click="noPic()">
             </div>
             <div ng-if="tipsPhotos.length > 0">
-                <img ng-src="{{photos[0]}}" width="60px" height="60px" ng-click="openOriginPic(0)">
+                <img ng-src="{{photos[0]}}" class="road-tips-img" width="60px" height="60px" ng-click="openOriginPic(0)">
                 <span style=" float: right;top: 0px;right: 10px; margin-top: -10px;background: red;border-radius: 15px;color: #fff!important;cursor: pointer;position: relative;line-height: 20px;display: inline-block;width: 20px;height: 20px;font-size: 13px;text-align: center" ng-if="tipsPhotos.length!=0">{{tipsPhotos.length}}</span>
             </div>
         </div>
         <div class="col-sm-12" style="margin-left: 30px; display: inline; cursor: pointer; padding-top: 2px; padding-left: 19px; width: 100px">
             <div ng-if="audios.length == 0">
-                <img ng-src="../../../images/road/img/novoice.png" width="60px" height="60px" ng-click="noAudio()">
+                <img ng-src="../../../images/road/img/novoice.png" class="road-tips-img" width="60px" height="60px" ng-click="noAudio()">
             </div>
             <div ng-if="audios.length > 0">
-                <img ng-src="../../../images/road/img/voice.png" width="60px" height="60px" ng-click="openVideo(0)">
+                <img ng-src="../../../images/road/img/voice.png" class="road-tips-img" width="60px" height="60px" ng-click="openVideo(0)">
                 <span style="float: right;top: 0px;right: 10px; margin-top: -10px;background: red;border-radius: 15px;color: #fff!important;cursor: pointer;position: relative;line-height: 20px;display: inline-block;width: 20px;height: 20px;font-size: 13px;text-align: center">{{audios.length}}</span>
             </div>
         </div>
@@ -1446,7 +1446,7 @@
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
                             <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
                             <div class="col-sm-7" style="padding: 3px">
-                                <span class="label label-info" ng-bind="showContent"></span>
+                                <span class="label" ng-bind="showContent"></span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('name')">
