--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -14,6 +14,10 @@
 
 /* *********tips图片缩放********* */
 
+.road-tips-img{
+    border-radius:3px;
+}
+
 #imgContainer {
     width: 520px;
     height: 300px;
