子任务增加统计图

--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -1573,6 +1573,31 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
     -moz-box-shadow: none;
 }
 
+/*灰色按钮*/
+
+.btn.btn-purple {
+    background: rgba(85, 85, 85,.9);
+    color: #FFF;
+    /*font-size: 14px;*/
+    font-weight: bold;
+}
+
+.btn.btn-purple:hover {
+    color: #FFF;
+    background: rgba(34, 34, 34, 0.9);
+}
+
+.btn.btn-purple.active {
+    background: rgba(34, 34, 34, 0.9);
+}
+
+.btn.btn-purple:focus {
+    color: #FFF;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+}
+
 
 /*自适应*/
 
