修改POI新增，请求POI增加遮罩，增加行政区划代表点

--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -403,6 +403,9 @@ form input[type='checkbox']:checked.ng-dirty {
     padding: 5px;
 }
 
+.fm-component  div.title span.label-info {
+    background-color:gray;
+}
 
 /************************* 图片资源 ******************************/
 
