去掉label字体加粗

--- a/scripts/components/road3/tpls/layers_switch_tpl/filedsResultTpl.html
+++ b/scripts/components/road3/tpls/layers_switch_tpl/filedsResultTpl.html
@@ -44,7 +44,7 @@
     #tipsTabContent #dataList > li > div > label {
         color: #FFF;
         cursor: pointer;
-        /*font-weight: bold;*/
+        font-weight: 100;
     }
     #tipsTabContent #dataList > li > div > label>span{
         color:rgba(255,255,255,0.5);
@@ -76,7 +76,7 @@
     }
     #tipsTabContent #dataList > li > ul > li > label {
         cursor: pointer;
-        /*font-weight: bold;*/
+        font-weight: 100;
     }
     /********************待处理的样式****************************************/
     #tipsTabContent #dataListOfPending {
