--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -509,7 +509,7 @@
                     </form>
                 </div>-->
                 <!--begin 条件限速-->
-                <div class="panel-body" ng-if="allTipsType==1111" style="border-radius: 4px;background-color: #555;">
+                <!--<div class="panel-body" ng-if="allTipsType==1111" style="border-radius: 4px;background-color: #555;">
                     <form class="form-horizontal" method="get" style="padding: 0px 3px 0px 3px;">
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
                             <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
@@ -554,7 +554,7 @@
                             </div>
                         </div>
                     </form>
-                </div>
+                </div>-->
                 <!--end 条件限速-->
                 <!--begin 车道限速-->
                 <div class="panel-body" ng-if="allTipsType==1113" style="border-radius: 4px;background-color: #555;">
@@ -1546,10 +1546,16 @@
                                 <span class="label">{{rdDir}}</span>
                             </div>
                         </div>
-                        <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('value')">
+                        <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('value') && !dataTipsData.isConditionLimit">
                             <label class="col-sm-5 control-label" style="padding: 4px">限&nbsp; 速&nbsp; 值:</label>
                             <div class="col-sm-7" style="padding: 4px">
                                 <span class="label ">{{dataTipsData.value}} km/h</span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('value') && dataTipsData.isConditionLimit">
+                            <label class="col-sm-5 control-label" style="padding: 4px">限&nbsp; 速&nbsp; 值:</label>
+                            <div class="col-sm-7" style="padding: 4px">
+                                <span class="label ">{{dataTipsData.limitValue}} km/h</span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('se')">
