--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -185,7 +185,7 @@ a:hover {
 }
 
 .fm-tabs {
-    background-color: #555;
+    /*background-color: #555;*/
     padding: 0px 10px;
     margin-bottom: 5px;
 }
