--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -197,8 +197,7 @@ a:hover {
     padding: 6px 5px;
     display: inline-block;
     text-align: center;
-    /*background-color: #555;*/
-    background-color: #313131;
+    background-color: #555;
 }
 
 .fm-tabs a.tab:hover {
@@ -208,8 +207,7 @@ a:hover {
 .fm-tabs a.tab.active {
     color: #fff;
     border-bottom: 1px solid rgba(255, 255, 255, .8);
-    /*background-color: #313131;*/
-    background-color: #555;
+    background-color: #313131;
     opacity: 0.9;
     transition: all .3s;
 }
@@ -1660,3 +1658,11 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
     background-color: #333;
     color: #fff;
 }
+
+
+/*分页样式*/
+.fm-table-content table + div{
+    position: fixed;
+    bottom: -15px;
+}
+
