--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -610,7 +610,7 @@ form input[type='checkbox']:checked.ng-dirty {
 }
 
 .fm-console-content {
-    height: 172px;
+    height: 100%;
     overflow-y: auto;
     padding-left: 5px;
     padding-right: 5px;
