修改大陆交叉口模式图备注信息不能保存的问题

--- a/scripts/components/road3/tpls/attr_branch_Tpl/schematicOfBranch.html
+++ b/scripts/components/road3/tpls/attr_branch_Tpl/schematicOfBranch.html
@@ -82,7 +82,7 @@
             <div class="d-group">
                 <div class="d-name">备注信息：</div>
                 <div class="d-value">
-                    <textarea class="d-input rounded" cols="30" rows="3" placeholder="备注信息" ng-model="diverObj.memo"></textarea>
+                    <textarea class="d-input rounded" cols="30" rows="3" placeholder="备注信息" ng-model="diverObj.schematics[0].memo"></textarea>
                 </div>
             </div>
         </div>
