--- a/scripts/components/directives/loginForm/loginForm.htm
+++ b/scripts/components/directives/loginForm/loginForm.htm
@@ -38,7 +38,7 @@
     <div class="form-group">
         <div class="col-sm-12">
             <div class="checkbox">
-                <label><input type="checkbox"> 记住我</label>
+                <label><input ng-model="rememberMe" type="checkbox"> 记住我</label>
             </div>
         </div>
     </div>
