--- a/styles/imeep/login2.css
+++ b/styles/imeep/login2.css
@@ -6,7 +6,7 @@ body {
   min-width: 400px;
   font-family: 'Helvetica Neue', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', '黑体', Arial, sans-serif;
   font-size: 14px;
-  background: #000;
+  background: #1a1a1a;
 }
 /******************************************导航**************************************************/
 #navibar {
@@ -48,16 +48,21 @@ body {
   right: 0;
   margin: auto;
   width: 400px;
-  height: 300px;
+  height: 280px;
   padding: 25px;
-  background: #1a1a1a;
   border-radius: 10px;
-  /*background-image:-webkit-linear-gradient(to bottom, #666666, #1a1a1a);*/
-  /*background-image:linear-gradient(to bottom,#666666,#1a1a1a);*/
+  background: -webkit-linear-gradient(#333333, #eeeeee 38%, #222222 90%);
+  /* Safari 5.1 - 6.0 */
+  background: -o-linear-gradient(#333333, #eeeeee 38%, #222222 90%);
+  /* Opera 11.1 - 12.0 */
+  background: -moz-linear-gradient(#333333, #eeeeee 38%, #222222 90%);
+  /* Firefox 3.6 - 15 */
+  background: linear-gradient(#333333, #eeeeee 38%, #222222 90%);
+  /* 标准的语法（必须放在最后） */
 }
-.login .company-logo {
-  height: 60px;
-  padding: 10px 0px;
+.login form {
+  margin-top: 30px;
+  padding: 0 25px;
 }
 .login button {
   background: #fff;
@@ -75,7 +80,7 @@ footer.bs-docs-footer {
   text-align: center;
   line-height: 40px;
   border-top: 1px solid #333;
-  background-color: rgba(0, 0, 0, 0.78);
+  background: #1a1a1a;
   color: white;
   height: 6%;
 }
